# Financial_data_pipeline

./: .gitignore  README.md  pyproject.toml
data_pipeline/: authentication.py  cleaner.py  database_conn.py  fetcher.py  loader.py  log_config.py  main.py  market_calendar.py  master_key.csv  national_holidays.csv
query_helper/: agent.py  anlsys.py  connection.py  dataframe_builder.py  helper.py  mcp_ser.py  tst.csv
